k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-test
  namespace: k8s-test
spec:
  selector:
    app: k8s-test
  ports:
    - port: 80
      targetPort: 8080
