k8s/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: k8s-test
  namespace: k8s-test
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`k8s-test.souluanf.dev`)
      kind: Rule
      services:
        - name: k8s-test
          port: 80
  tls:
    certResolver: letsencrypt
